# Sunday-Afternoon-Q4

./: readme.md
.claude-skills/study-notes/: README.md
DiskSpaceUtility/: DiskSpaceCleaner.ps1  DiskSpaceInvestigator.ps1  README.md
class05/: class05.md
class06/: README.md  main.py  pyproject.toml  readmd.md
class07/: copy_figma_design.md  figma_templates.md  mcp_server_lists.md  readme.md
class09/: .vercelignore  readme.md  requirements.txt  vercel.json
class09/api/: main.py  pyproject.toml
class09/app/: layout.tsx  page.tsx
class10/: .env  claude.md  readme.md
class10/backend/: main.py  pyproject.toml
class14/: .env.example  Class_Notes.md  README.md  connection.py  docker.md  main.py  requirements.txt  tools.py
class15/: Dockerfile  README.md  class-notes.md  docker-compose.yml  package-lock.json  package.json
class15/app/: globals.css  layout.tsx  page.tsx
class16/: docker-compose.yml
class16/backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
class16II/backend/: Dockerfile
class16II/frontend/: .dockerignore  (+1 more)
class17/: class-content.md  kubernetes-architecture.md  readme.md
class18/: README.md  class_notes.md  main.py  pyproject.toml  rbac_main.py
class18/__test__/: test_login.py  test_registration.py
class19/: .gitignore  main.py  middleware_main.py  pyproject.toml  readme.md
class20/: class-notes.md  client.py  main.py  pyproject.toml  readme.md
class21/: README.md  client.py  pyproject.toml  rules.json  server.py
class22/: README.md  class-notes.md  client.py  pyproject.toml  sampling.py  server.py
(+28 files in other folders)
