[project]
name = "class19"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "rich>=14.3.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.40.0",
]
